--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,11 @@ h1, h2, h3, h4 {
 h1 {
   font-size: 37px;
   letter-spacing: 12px;
+  /* z-index: 2; */
+  position: absolute;
+  bottom: -11px;
+  width: 100%;
+  line-height: 1;
 }
 
 h2 {
@@ -117,14 +122,17 @@ section {
   Header
   ------------------------------------------- */
 header {
-  padding-top: 30px;
+  /* padding-top: 30px; */
   background-image: url('../img/ribs.2nd.jpg');
-  background-attachment: fixed;
-  background-position: center;
+  /* background-attachment: fixed; */
+  background-position: bottom center;
   background-size: cover;
+  position: sticky;
+  top: -530px;
+  z-index: 1;
   /*WHATTTT is vh? vh stands for "viewport height". */
   /*This is like saying "The header should take up 90% of the height of the browser window"*/
-  height: 90vh;
+  height: 650px;
   /*But we don't want it to ever get less than 400px tall or our content will get cut off!*/
   min-height: 400px;
   /* WHATTTT in the world is this? */
@@ -158,12 +166,6 @@ nav a {
   letter-spacing: 0.75px;
   padding: 0 60px;
   text-transform: uppercase;
-}
-
-h1 a,
-h1 a:hover,
-header h2 {
-  color: #fff;
 }
 
 /* ----------------------------------------
@@ -244,17 +246,17 @@ footer input {
 }
 
 button {
-  color: black;
+  color: grey;
   font-family: Helvetica;
   text-align: center;
   line-height: 1;
   padding: 14px 40px;
   background-color: transparent;
-  border: 2px solid black;
+  border: 2px solid white;
   font-size: 20px;
   text-transform: uppercase;
   letter-spacing: .1rem;
-  animation: font-bulger 1s .5s 6;
+  animation: font-bulger 1s .5s infinite;
 }
 
 /* .wiggly for jquery */
