--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,7 @@
-/* --------------------------------------------------------------------------
-Base styles:
------------------------------------------------------------------------------ */
-/* Fix to include padding and border in the total width for each element */
 * {
   box-sizing: border-box;
 }
 
-/* Fix for responsive images */
 img {
   max-width: 100%;
 }
@@ -19,22 +14,13 @@ body {
   text-align: center;
   color: #44545E;
   background-color: black;
-  /*This line makes text appear smoother and crisper.*/
-  /*try commenting out this line and refreshing your browser to see the difference!*/
   -webkit-font-smoothing: antialiased;
 }
 
-/* This code will make images scale with the page.
-     to see this in action, comment it out and see what the
-  	 page looks like in the browser as you make the window
-  	 narrower without this code. The images don't shrink anymore! */
 img {
   max-width: 100%;
 }
 
-/* ----------------------------------------
-  Typography
-  ------------------------------------------- */
 p {
   font-family: 'Lato', sans-serif;
   text-transform: none;
@@ -58,10 +44,23 @@ h1 {
 
 h2 {
   margin-bottom: 45px;
+  margin-top: 60px;
 }
 
 h3 {
   margin-bottom: 45px;
+}
+
+h4 {
+  color: grey;
+  font-size: 45px;
+  margin-top: 80px;
+  margin-bottom: 50px;
+}
+
+h6 {
+  color: grey;
+  font-size: 30px;
 }
 
 a {
@@ -71,13 +70,22 @@ a {
   transition: all .3s ease-in-out;
 }
 
+.blog-text {
+  text-align: center;
+  margin-left: 150px;
+  margin-right: 150px;
+}
+
+.event-text {
+  text-align: center;
+  margin-left: 130px;
+  margin-right: 130px;
+}
+
 a:hover {
   color: #44545E;
 }
 
-/* ----------------------------------------
-  Buttons
-  ------------------------------------------- */
 button,
 article a {
   cursor: pointer;
@@ -91,12 +99,9 @@ article a {
   text-transform: uppercase;
   font-size: 12px;
   letter-spacing: 1.2px;
-  /* BONUS #2: Transition & hover effect on anchors / buttons */
-  /* This line will make any changes on hover animate */
   transition: all .3s ease-in-out;
 }
 
-/* BONUS #2 (continued): Add a hover effect for buttons and anchors!*/
 button:hover,
 article a:hover {
   background-color: #44545E;
@@ -104,13 +109,9 @@ article a:hover {
   font-weight: 600;
 }
 
-/* ----------------------------------------
-  Layout
-  ------------------------------------------- */
-.article-grid,
-.gallery-grid {
+.image-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-gap: 30px;
 }
 
@@ -118,46 +119,25 @@ section {
   padding: 105px 30px;
 }
 
-/* ----------------------------------------
-  Header
-  ------------------------------------------- */
 header {
-  /* padding-top: 30px; */
   background-image: url('../img/ribs.2nd.jpg');
-  /* background-attachment: fixed; */
   background-position: bottom center;
   background-size: cover;
   position: sticky;
   top: -530px;
   z-index: 1;
-  /*WHATTTT is vh? vh stands for "viewport height". */
-  /*This is like saying "The header should take up 90% of the height of the browser window"*/
   height: 650px;
-  /*But we don't want it to ever get less than 400px tall or our content will get cut off!*/
-  min-height: 400px;
-  /* WHATTTT in the world is this? */
-  /* This code allows us to perfectly center the text in the header vertically. */
-  /*The first line display: flex; sets up a Flexbox (similar in ways to display: grid;)*/
   display: flex;
-  /*Now we're saying we want items to stack on top of each other (the default is all children of a Flexbox)*/
-  /*will appear next to each other*/
   flex-direction: column;
-  /*Now we're saying "vertically center that text, man!"*/
   justify-content: center;
-  /*Still confused? Try opening your inspector and checking and unchecking each line to see what
-  	it does!*/
 }
 
 nav {
   background-color: grey;
   width: 100%;
   padding: 18px 0;
-  /* BONUS #1: CREATING A STICKY NAV */
-  /* Make the nav "stick" or stay in place as the user scrolls*/
   position: fixed;
-  /* Make sure the nav stays at the very top of the page. 0 is shorthand for 0px */
   top: 0;
-  /* Make sure the nav is on top of the other content. Any number above 0 would work here! */
   z-index: 100;
 }
 
@@ -168,30 +148,26 @@ nav a {
   text-transform: uppercase;
 }
 
-/* ----------------------------------------
-  Articles
-  ------------------------------------------- */
-.article-grid {
+.image-grid {
   max-width: 1290px;
-  margin: 0 auto;
 }
 
 article p {
   line-height: 1.4;
   font-size: 15px;
+  text-align: center;
+  margin-top: 40px;
+  max-width: 400px;
+  margin-left: 80px;
 }
 
 article a {
   margin-top: 30px;
-  /*This will make sure we can add padding and margin to the top and bottom of anchors*/
   display: inline-block;
 }
 
-/* ----------------------------------------
-  Footer
-  ------------------------------------------- */
 footer {
-  background-color: #CDF3F6;
+  background-color: grey;
   overflow: auto;
   padding-top: 30px;
 }
@@ -205,9 +181,7 @@ footer a {
 }
 
 hr {
-  /*First remove the default ugly border the browser adds! Yuck*/
   border: none;
-  /* Now add your own border to the top or bottom */
   border-bottom: 2px solid #44545E;
   margin: 34px 0 3px;
 }
@@ -222,29 +196,6 @@ footer input {
   outline: 0;
 }
 
-@media screen and (max-width: 800px) {
-  .article-grid {
-    grid-template-columns: 1fr;
-  }
-
-  .gallery-grid {
-    grid-template-columns: 1fr;
-  }
-
-  .hamburger {
-    display: block;
-    text-align: left;
-  }
-
-  nav {
-    display: none;
-  }
-
-  .hide-mobile {
-    display: none;
-  }
-}
-
 button {
   color: grey;
   font-family: Helvetica;
@@ -256,7 +207,9 @@ button {
   font-size: 20px;
   text-transform: uppercase;
   letter-spacing: .1rem;
-  animation: font-bulger 1s .5s infinite;
+  animation: font-bulger 2s .5s infinite;
+  margin-bottom: 40px;
+  margin-top: 40px;
 }
 
 /* .wiggly for jquery */
